# argmin-simd

./: Cargo.toml  PLAN.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: benchmark.yml
benches/: argmin.rs
src/: lib.rs
