[package]
name = "argmin-simd"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "argmin"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug = false
debug-assertions = false
incremental = false

[profile.bench]
inherits = "release"